# GeekyGadgets

./: .gitignore  pyproject.toml  test.html
GeekyGadgets/: Classy.py  Configs.py  Downloader.py  Formatting.py  Functions.py  Globals.py  Hooks.py  IO.py  Iterators.py  Logging.py  MonkeyPatch.py  Paths.py  Processes.py  Reporting.py  SQL.py  SpecialTypes.py  TagDown.py  TerminalUpdater.py  This.py  Threads.py  TypeHinting.py  URL.py  Wrappers.py  __init__.py  not_used__init__.py
GeekyGadgets/Bioinformatics/: Globals.py
GeekyGadgets/Colors/: ANSI.py  Globals.py  HTML.py  Themes.py  __init__.py
GeekyGadgets/Formatting/: Case.py  SISize.py  __init__.py
GeekyGadgets/Illustrative/: NodesAndGraphs.py  TextData.py  __init__.py
GeekyGadgets/Semantics/: Globals.py  __init__.py
GeekyGadgets/Threads/: Dummies.py  Globals.py  Groups.py  Meta.py  MultiTasker.py  Synch.py  Thread.py  __init__.py
tests/: endpipe.py  fail.py  midpipe.py  startpipe.py  success.py  test_classy.py  test_colors.py  test_config.py  test_formatting.py  test_illustrative.py  test_io.py  test_iterators.py  test_logging.py  test_processes.py  test_semantical_markup.py  test_special_types.py  test_sql.py  test_terminal_updater.py  test_this.py  test_threads.py  test_type_hinting.py  test_url.py  test_wrappers.py  tomlExample.py
tests/test_config/: tomlExample.toml
tests/test_illustrative/: tree.graphml  tree.html  tree_4.graphml  tree_4.html
tests/test_processes/: endpipe.py  fail.py  midpipe.py  startpipe.py  success.py
tests/test_progress_8/: longpipe.txt
tests/test_wrappers/: stdout.txt
(+16 files in other folders)
