[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "GeekyGadgets"
readme = "README.md"
description = "Smaller objects abstract enough to not be repeated for each new project! ."
version = "0.1"
requires-python = ">= 3.10"
license = { file = "LICENSE"}
keywords = ["Tools", "QOL", "QoL"]
authors = [
    {name = "Fredrik Sörensen", email = "fredrik.sorensen@foi.se"}
]
maintainers = [
    {name = "Fredrik Sörensen", email = "fredrik.sorensen@foi.se"}
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Programming :: Development",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    # "Programming Language :: Python :: 3.8",
    # "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent"
]
dependencies = [
    "toml; python_version<'3.11'"
]

[project.urls]
Repository = "https://github.com/XJ-04561/GeekyGadgets.git"

